--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mangas
-DB_USERNAME=epul
+DB_DATABASE=oeuvres
+DB_USERNAME=oeuvres
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
